createImageBuffer fail should be handled in the same way as other fails https://bugs.webkit.org/show_bug.cgi?id=49799

Reviewed by Nikolas Zimmermann.

WebCore:

When createImageBuffer fails (i.e the image width or height is less than
0.5, which is rounded to 0) it just returs with false. Since the m_filter
hash map is not updated in this case, the filter image is not drawn.

Test: svg/filters/filter-rounding-issues.svg

* rendering/RenderSVGResourceFilter.cpp:
(WebCore::RenderSVGResourceFilter::applyResource):

LayoutTests:

* platform/mac/svg/filters/filter-rounding-issues-expected.checksum: Added.
* platform/mac/svg/filters/filter-rounding-issues-expected.png: Added.
* svg/filters/filter-rounding-issues-expected.txt: Added.
* svg/filters/filter-rounding-issues.svg: Added.



Canonical link: https://commits.webkit.org/62851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72389 268f45cc-cd09-0410-ab3c-d52691b4dbfc